--- a/blog.html
+++ b/blog.html
@@ -513,6 +513,78 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+
+<center><img src="https://middlepot.com/img/3.png"/></center><br><br>
+<font size = 1><font color="#CBBBB1">
+<center>april . 30 . 2023</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub>💗</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+lately, just living day after day has been quite wonderful. sometimes full of little things to do, but mainly quiet and peaceful.
+doing housework, running errands, crafting for <a id="linkbjinho" href="https://shybunny.store" target="_blank">my store</a>, coding, journaling, editing cute graphics .. now i have many things standing by, just waiting to be finished, which is very exciting !
+and i have been taking naps often too, because the weather is just so comfy at this time of the year. nothing like lying in a soft bed after a long walk  <sub><sub>🛏</sub></sub>
+collecting small happiness after another, i'm very motivated to keep it going.
+
+as i mentioned last post, recently it was bubu's birthday, and coincidentally also my cousins' wedding, so we went for traveling after a very long time !!
+meeting all my dearest family members made me so happy. they live far away from me, so we sadly don't have the opportunity to see each other often .. but now, i want to try my best to travel more often to meet them, and also to have more fun experiences with the love of my life <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+
+soon, by day 5, we will complete our 10th year together, and i wanted to make something special .. so i prioritized this little site project above other things, so i could finish in time for our special date : <a id="linkbjinho" href="https://love.pooftie.me" target="_blank">love.pooftie.me</a> <sub><sub>💻</sub></sub></pre>
+<br><br>
+
+<center><a href="https://love.pooftie.me" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/wHmsedD.gif"/></a>
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this web page contains several visual elements that refer to real objects that are precious to us, and somewhat represent our relationship <sub><sub>💘</sub></sub>
+i also added a day counter that will keep going forever, and many phrases of what love means to me. 
+currently there are 30+ that are displayed randomly, but i want to keep adding to it whenever i think of something else !
+
+
+
+besides that, another thing we did this month was the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> easter event and spring season <sub><sub>💐</sub></sub>
+so all stuff from last year are back ( check screenshots clicking <a id="linkbjinho" href="/archive/index#springeaster">here</a> ) but now with a new spring collection for the "rollcake store", new clothes for the temporary "paper fairy" laptop shop, new stickers, plants, and house decor too !!
+let me show you some of my favorite new outfits, and the new decor set :</pre>
+<br><br>
+
+<center><img width="auto" height="200px" src="https://i.imgur.com/RFesabL.png">　
+<img width="auto" height="200px" src="https://i.imgur.com/lsTnjBv.png"><br><br>
+<img width="auto" height="200px" src="https://i.imgur.com/PJnnWEF.png"><br>
+</center>
+<br><br>
+<center><img width="420px" height="auto" src="https://i.imgur.com/r8kNYQb.png"><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i love spring items, it's such a delicate and pretty season <sub>🦋</sub>
+oh, and we have worked very hard to improve the easter event this year, more specifically the item dyeing feature !
+we had to categorize each item ( can you believe we already have, aside from stickers, 400+ items in-game ? ) then making one shader for each color spectrum, and well .. it's still not perfect, but at least you can achieve way better results than before.
+we also made the event last longer and adjusted the amount of eggs you need to find, so it's be easier to make full collections of customized colored items <sub><sub>🌈</sub></sub>
+
+
+
+well, that's all i have to show you fluffies, for now !!
+as i said, i do have other things waiting by, so hopefully i can finish them and publish soon.
+thank you for being here with me during my creative journey <font color="#d3a5a5" style="font-size:11px;">♡</font>
+let's keep trying our very best to be happy.
+
+xoxo <sub>🎀</sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://middlepot.com/img/3.png"/></center><br>
+
+<br><br>
+
 <center><img src="https://middlepot.com/img/10.png"/></center><br><br>
 <font size = 1><font color="#CBBBB1">
 <center>march . 31 . 2023</center>
@@ -658,7 +730,7 @@ but of course, i will mostly use my new address from now on, so i will send it t
 i'm still working on my projects in a slower pace, so i won't feel overwhelmed. after having a new organized workspace i feel like i'll have plenty of motivation to finish some harder things !
 most importantly, i'm getting things done, following my lists <sub>✏️</sub>
 
-one of the things i did was adding the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> valentine's day event, with all stuff from last year ( you can check screenshots clicking <a id="linkbjinho" href="#valentinesevent">here</a> ) + new clothes, accessories, and stickers !!
+one of the things i did was adding the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> valentine's day event, with all stuff from last year ( you can check screenshots clicking <a id="linkbjinho" href="/archive/index#valentinesevent">here</a> ) + new clothes, accessories, and stickers !!
 this year i tried to make "fancier" outfits, here are some :</pre>
 <br><br>
 
