--- a/blog.html
+++ b/blog.html
@@ -526,7 +526,7 @@ doing housework, running errands, crafting for <a id="linkbjinho" href="https://
 and i have been taking naps often too, because the weather is just so comfy at this time of the year. nothing like lying in a soft bed after a long walk  <sub><sub>🛏</sub></sub>
 collecting small happiness after another, i'm very motivated to keep it going.
 
-as i mentioned last post, recently it was bubu's birthday, and coincidentally also my cousins' wedding, so we went for traveling after a very long time !!
+as i mentioned last post, recently it was bubu's birthday, and coincidentally also my cousin's wedding, so we went for traveling after a very long time !!
 meeting all my dearest family members made me so happy. they live far away from me, so we sadly don't have the opportunity to see each other often .. but now, i want to try my best to travel more often to meet them, and also to have more fun experiences with the love of my life <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
 
