--- a/blog.html
+++ b/blog.html
@@ -566,7 +566,7 @@ let me show you some of my favorite new outfits, and the new decor set :</pre>
 i love spring items, it's such a delicate and pretty season <sub>🦋</sub>
 oh, and we have worked very hard to improve the easter event this year, more specifically the item dyeing feature !
 we had to categorize each item ( can you believe we already have, aside from stickers, 400+ items in-game ? ) then making one shader for each color spectrum, and well .. it's still not perfect, but at least you can achieve way better results than before.
-we also made the event last longer and adjusted the amount of eggs you need to find, so it's be easier to make full collections of customized colored items <sub><sub>🌈</sub></sub>
+we also made the event last longer and adjusted the amount of eggs you need to find, so it's easier to make full collections of customized colored items <sub><sub>🌈</sub></sub>
 
 
 
