--- a/faq.html
+++ b/faq.html
@@ -787,7 +787,7 @@ i only feel 100% comfortable inside my own websites / games / platforms, or in t
 <font color="#d8b9af">　( october 2018 + june 2022 )</font>
 <br><br>
 <font color="#B1A69E">
-social media have created this need for big numbers in people and i feel that i don't have reasons to keep seeing numbers than to praise a false reputation for my image on the internet. i'm just a normal person doing my best, just like any other person. i reflected a lot on this and people treating me differently because of numbers is not something that i value and i don't think is good for me or the visitors. the race for numbers and fame is not the kind of thing i'd be proud to encourage on my site ( or anywhere else, but unfortunately that's not always an option, hence why i avoid social media so much ).<br>
+social media have created this need for big numbers in people and i feel that i don't have reasons to keep seeking numbers to praise a false reputation for my image on the internet. i'm just a normal person doing my best, just like any other person. i reflected a lot on this and people treating me differently because of numbers is not something that i value and i don't think is good for me or the visitors. the race for numbers and fame is not the kind of thing i'd be proud to encourage on my site ( or anywhere else, but unfortunately that's not always an option, hence why i avoid social media so much ).<br>
 i used to keep numbers exposed despite not approving their overvaluation because i believed it could bring public ; maybe people could took me more seriously if i had big numbers ? maybe they could allow themselves to look at the site more easily if they saw this "seal of approval" from previous visitors ?<br>
 .. but is it really worth blinding people with such superficial information and then saying it's not important ?<br>
 i have come to the conclusion that i must be an example and show that appreciation of numbers is not healthy or productive.<br>
@@ -821,13 +821,13 @@ i never wanted to be controlled by others like that.
 
 so, from now on : <b>my social media accounts will be officially inactive !</b>
 i am officially unplugging myself out of the ugly world of the platforms runned by big companies.
-i will only use some private accounts for interacting with content i like, and that's it.
+i will, at most, only use "disposable" private accounts if i need to interact with specific content i like, and that's it.
 
 i never felt comfortable using my accounts in a personal way, for both my sanity & safety i've always kept things this way.
 since 2012, when the old web as i knew was starting to collapse rapidly, i have been searching for a way to escape those uncomfortable spaces and find a way to express myself the way i want.
 many people feel the same as me, and are also trying to walk away from big social media, so i try to help myself and others by working on solutions !
 
-after some months of use, <a id="linkbjinho" href="/blog#snippets" target="_blank">my web code snippets</a> have been a good help for making social media sites less stressful ( and cuter ) for me, but, as expected .. only as an inactive user.
+after some months of use, <a id="linkbjinho" href="/archive/index#snippets" target="_blank">my web code snippets</a> have been a good help for making social media sites less stressful ( and cuter ) for me, but, as expected .. only as an inactive user.
 i am still checking some youtube channels & tumblr blogs regularly, and it's actually nice !
 ( i received messages from people telling me that the codes helped them too, so i will keep them updated, there is no need to worry about that )
 
