--- a/about.html
+++ b/about.html
@@ -484,7 +484,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <center>
 <img src="https://i.imgur.com/0agDf5A.png"/></center>
 <div style="position:absolute; left:18%; right:18%;"><center>
-<font color="#d6b3b3"><a id="linkzinhoo" title="also known as puf" data-target="spoiler1" class="btn-spoiler">i'm melissa</a></font><font color="#8e7d7d"> ・ </font><font color="#bca6a0"><a id="linkzinhoo" title="august . 11 . 1997" data-target="spoiler2" class="btn-spoiler2">i'm 25</a></font><font color="#8e7d7d"> ・ </font><font color="#d6b3b3"><a id="linkzinhoo" title="she / her" data-target="spoiler3" class="btn-spoiler3">i'm a girl</a></font><font color="#8e7d7d">  ・ </font><font color="#bca6a0"><a id="linkzinhoo" title="in a countryside small town" data-target="spoiler4" class="btn-spoiler4">i live in são paulo</a></font></center>
+<font color="#d6b3b3"><a id="linkzinhoo" title="also known as puf" data-target="spoiler1" class="btn-spoiler">i'm melissa</a></font><font color="#8e7d7d"> ・ </font><font color="#bca6a0"><a id="linkzinhoo" title="august . 11 . 1997" data-target="spoiler2" class="btn-spoiler2">i'm 25 years old</a></font><font color="#8e7d7d"> ・ </font><font color="#d6b3b3"><a id="linkzinhoo" title="in the countryside of são paulo state" data-target="spoiler3" class="btn-spoiler3">i live in brazil</a></font></center>
 
 
 <center>
@@ -556,11 +556,11 @@ p { margin: 0; }
     loop($btns, function($btn){
         $btn.addEventListener("click", function(){
             var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "i'm 25" ){
-                this.innerHTML = "i'm 25 ˣ";
+            if( this.innerHTML === "i'm 25 years old" ){
+                this.innerHTML = "i'm 25 years old ˣ";
                 $spoiler.classList.remove("is-closed2");
             } else {
-                this.innerHTML = "i'm 25";
+                this.innerHTML = "i'm 25 years old";
                 $spoiler.classList.add("is-closed2");
             }
         });
@@ -573,7 +573,7 @@ p { margin: 0; }
 <div id="spoiler3" class="spoiler-area3 is-closed3" style="margin-top:-10px;">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
-<font color="#bca6a0" style="font-size:9px; letter-spacing:0.5px;">( she / her )</font>
+<font color="#bca6a0" style="font-size:9px; letter-spacing:0.5px;">( in the countryside of são paulo state )</font>
 
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
@@ -596,11 +596,11 @@ p { margin: 0; }
     loop($btns, function($btn){
         $btn.addEventListener("click", function(){
             var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "i'm a girl" ){
-                this.innerHTML = "i'm a girl ˣ";
+            if( this.innerHTML === "i live in brazil" ){
+                this.innerHTML = "i live in brazil ˣ";
                 $spoiler.classList.remove("is-closed3");
             } else {
-                this.innerHTML = "i'm a girl";
+                this.innerHTML = "i live in brazil";
                 $spoiler.classList.add("is-closed3");
             }
         });
