--- a/blog.html
+++ b/blog.html
@@ -514,6 +514,106 @@ font-family: Verdana;
 <div id="coisinhos">
 
 
+<center><img src="https://middlepot.com/img/23.png"/></center><br><br>
+<font size = 1><font color="#CBBBB1">
+<center>may . 31 . 2023</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub>🌼</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i hope life has been kind to you lately .. there are so many fun things that we can try out, and so much time ahead of us. isn't that motivating ?
+i am continuing with my slow daily routine, focusing on what i love to do, and doing my best not to let little stressful experiences fill me with anxiety again.
+having a healthy lifestyle is a neverending work in progress, but when i see myself in a happier place than i was yesterday, and imagining i can make even more happy memories tomorrow, makes everything worthwile <sub><sub>🎀</sub></sub>
+
+my main motivation for creating digital content has always been these small moments of happiness i find in my real lfe everyday activities, and in trying new things, so i have been full of ideas for little games & sites !
+
+recently, as i already have told you, i have been going outside for walks pretty often, and also having picnics, so me and bubu can eat out without spending much.
+i have always loved picnics, just everything about it : preparing & packing snacks at home, finding new picnic spots, decorating the place to make it comfy, then simply enjoying our time with a beautiful nature view, and a gentle breeze <sub><sub>🧺</sub></sub>
+so, while searching for new outside hobbies, i quickly became obsessed with camping !
+i never really went for camping in my life, and the idea of actually cooking outside, having a little "house" tent, and spending a whole day & night in nature .. i must try it out !!
+
+
+inspired by this new interest of mine, i made a new mini game for the <a id="linkbjinho" href="https://poofties.club" target="_blank">poofties website</a>. click the preview image to play :</pre>
+<br><br>
+
+<center><a href="https://poofties.club/cooking" target="_blank"><img src="https://i.imgur.com/8SDRoDg.png"/></a>
+<br><br>
+<sub>🩰</sub> <a style="text-decoration: none;" href="https://file.pooftie.me/a/routine.mp3" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">routine .mp3</font></a>　
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+( as always, there is a hidden code in this game, see the hint on the <a id="linkbjinho" href="https://poofties.club/account/minigames" target="_blank">poofties account page</a> )
+
+it's a relaxing little game about cooking a warm broth outside !
+the melody is matches the feeling of doing something simple, from our routine, but always trying to make it special and somehow memorable.
+
+it was fun to include some photos of items i have in real life, such as the enamel pan, the wooden spoon ( i absolutely adore wooden and bamboo cutlery, i have many ), and the lovely flowery dress <sub><sub>📷</sub></sub>
+and, the mini gas stove i just bought recently, for cooking outdoors !
+i had a hard time deciding between buying that baby pink stove, or the white one, both are so cute ..
+in the end, i decided to go for the pink one, since i already have a white induction stove - besides, this soft & warm shade of baby pink not only goes perfectly with my pink cookware ( my pans are all either white or pink, with bamboo handles ) but also matches my pink electric oven, which is lovely !!
+these cute little details just make everything happier and more fun <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+when researching, i noticed that most items we needed we already had bought for our picnics. it's interesting to see how these two hobbies complement each other - both are about "living temporarily in nature" after all !
+by buying these items that are proper for outdoors we can prepare a cute & comfy little home anywhere we like, which is a wonderful concept to me, that brings endless new travel possibilities. <sub><sub>🚲</sub></sub>
+
+a nice big tent will be the last thing we'll buy, as it is the biggest and most expensive investment, so we'll keep practicing the "outdoors experiences" during our regular picnics.
+once the mini gas stove and folding wooden table & chairs set arrive we will be ready for a good "trial" experience : ruffled linen tablecloth, comfy chair cushions, a beautiful tassel parasol, some fairy lights .. oh i can't wait !!
+
+i know i have a lot to learn about camping, so i will go one step at a time.
+luckily, we live right next to the mountains, as well as a big park ( where we usually have our picnics ) so there are camping spots nearby, which makes everything more convenient !
+
+
+
+recently i have also bought new cotton fabrics, so i could sew new cloth bags and pouches, as well as make bee wax wraps. these are all really useful and super convenient for packing, and carrying things outside !
+i already had some i made with simple natural cotton fabric, but now i also can have some with different patterns & textures. so pretty <sub><sub>💕</sub></sub>
+
+inspired on that, i used photos of these fabrics to make a new page for the <a id="linkbjinho" href="https://dream.pooftie.me" target="_blank">dream directory</a>, the <a id="linkbjinho" href="https://dream.pooftie.me/patchwork" target="_blank">/patchwork</a> :</pre>
+<br><br>
+
+<center><a href="https://dream.pooftie.me/patchwork" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/afDGKo4.gif"></a><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+here you can simply sew patches by clicking on the screen <sub><sub>✂️</sub></sub>
+i find it satisfying to see it becoming cuter & cuter, don't you think ?
+
+then, i made yet another page for the dream directory, the <a id="linkbjinho" href="https://dream.pooftie.me/paint" target="_blank">/paint</a> :</pre>
+<br><br>
+
+<center><a href="https://dream.pooftie.me/paint" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/77HsSKr.gif"></a><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this one was simply inspired by how i have been having fun by painting things !
+i love renovating & redecorating objects, especially old boxes i find while thrifting. they often have so much potential, and only need some love <sub><sub>🎀</sub></sub>
+i find this page fun to play around and waste time when bored .. and i just love the glitter, i tried to make it look as magical as shimmery paint does in real life !
+( i usually would keep a whitewashed wood piece as it is, since it looks very beautiful to me, but well it's digital wood so it's fine heh )
+
+
+
+that's it for today's post .. i hope my little projects could put a smile on your face, or at least make your day a little bit happier <font color="#d3a5a5" style="font-size:11px;">♡</font>
+don't forget to give yourself plenty of rest, and fun new experiences too !
+
+
+xoxo <sub>🦋</sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://middlepot.com/img/23.png"/></center><br>
+
+<br><br>
+
 <center><img src="https://middlepot.com/img/3.png"/></center><br><br>
 <font size = 1><font color="#CBBBB1">
 <center>april . 30 . 2023</center>
