--- a/blog.html
+++ b/blog.html
@@ -548,7 +548,7 @@ inspired by this new interest of mine, i made a new mini game for the <a id="lin
 ( as always, there is a hidden code in this game, see the hint on the <a id="linkbjinho" href="https://poofties.club/account/minigames" target="_blank">poofties account page</a> )
 
 it's a relaxing little game about cooking a warm broth outside !
-the melody is matches the feeling of doing something simple, from our routine, but always trying to make it special and somehow memorable.
+the melody matches the feeling of doing something simple, from our routine, but always trying to make it special and somehow memorable.
 
 it was fun to include some photos of items i have in real life, such as the enamel pan, the wooden spoon ( i absolutely adore wooden and bamboo cutlery, i have many ), and the lovely flowery dress <sub><sub>📷</sub></sub>
 and, the mini gas stove i just bought recently, for cooking outdoors !
