--- a/recommended.html
+++ b/recommended.html
@@ -289,7 +289,9 @@ scroll down for webrings, cliques and buttons</font><br><br>
 <img src="https://i.imgur.com/WoYT1el.png"><br>
 <br><br>
 
-<a href="https://scrapbookofabisquedoll.blogspot.com" target="_blank"><img width="88px" height="50px" src="https://i.imgur.com/ZGtYXYn.png"></a>　　
+<a href="https://arunyi.art" target="_blank"><img src="https://i.imgur.com/PBz9jKp.gif"></a>　
+<a href="https://scrapbookofabisquedoll.blogspot.com" target="_blank"><img width="88px" height="45px" src="https://i.imgur.com/ZGtYXYn.png"></a>　
+<a href="https://vampirevalentine.neocities.org" target="_blank"><img src="https://i.imgur.com/BvI8cVd.gif"></a>　　
 
 <br><br>
 <a href="https://vivarism.neocities.org" target="_blank"><img src="https://i.imgur.com/Q8GVTmZ.png"></a>　
@@ -379,7 +381,7 @@ scroll down for webrings, cliques and buttons</font><br><br>
 
 　<br><br><a href="http://www.dollhospital.com.br/" target="_blank"><img width="88px" height="35px" src="http://i.imgur.com/CPLYLD2.png"/></a>
 　<a href="http://theprincesschateau.silentears.net" target="_blank"><img src="https://i.imgur.com/58xmjAn.gif"></a>
-　‌‌<a href="https://arunyi.art" target="_blank"><img src="https://i.imgur.com/7ZYyXXH.png"></a>　　
+　‌‌<a href="https://uwuboa.neocities.org" target="_blank"><img src="https://i.imgur.com/zqtmbUs.png"></a>　　
 
 <br><br><a href="https://allyratworld.neocities.org" target="_blank"><img src="https://i.imgur.com/fTCMebo.png"></a>
 　<a href="https://mimkitty.com" target="_blank"><img src="https://i.imgur.com/6W5CjTW.gif"></a>
