--- a/recommended.html
+++ b/recommended.html
@@ -285,8 +285,8 @@ scroll down for webrings, cliques and buttons</font><br><br>
 
 <br><br><div id='women-web'>
 <script type="text/javascript" src="https://womenoftheinternet.neocities.org/files/onionring-variables.js"></script>
-<script type="text/javascript" src="https://womenoftheinternet.neocities.org/files/soft-badge.js"></script>
-</div>  
+<script type="text/javascript" src="womenoftheinternet-customwidget.js"></script>
+</div>
 
  
 
