--- a/recommended.html
+++ b/recommended.html
@@ -282,15 +282,14 @@ scroll down for webrings, cliques and buttons</font><br><br>
 <br><br></div>
 <font style="font-size:10px; letter-spacing:1px;"><a style="text-decoration: none; color:#b09690; font-family:verdana; font-size:10px; letter-spacing:1px; background-color:#fff; border-radius: 10px; box-shadow: 0 0 10px #fff;" href="http://cliqued.wings.nu/" target="_blank"><font color="#d9a7a7">r</font><font color="#d1b69b">a</font><font color="#dbd19a">i</font><font color="#adccad">n</font><font color="#b2b2d4">b</font><font color="#bfb0cf">o</font><font color="#c9a9ba">w</font></a> <sub><sub><img src="https://i.imgur.com/KkdenmV.gif"></sub></sub> <font color="#d1b5b2">soft baby pink</font></font>
 
-
-<br><br><div id='women-web'>
+<!--<br><br><div id='women-web'>
 <script type="text/javascript" src="https://womenoftheinternet.neocities.org/files/onionring-variables.js"></script>
 <script type="text/javascript" src="womenoftheinternet-customwidget.js"></script>
 </div>
-
+-->
  
 
-<br><br><br>
+<br><br>
 <div style="line-height:8px;">
 	
 <center>
