--- a/status.html
+++ b/status.html
@@ -503,6 +503,9 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <div style="padding-left: 140px; padding-top: 68px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 310px; height: 170px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 8px;"><br>
 
+　<sub><img src="https://i.imgur.com/r2hI9Vg.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>06.14.23</sup></font> <font color="#cfbec2">꒱</font>　there's always time to be happy
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/t1l6f1l.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>05.20.23</sup></font> <font color="#c4b3b6">꒱</font>　i love picnics so much ♡
 
 <br><br><br>
@@ -528,9 +531,6 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/3ZPNzRB.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>07.08.22</sup></font> <font color="#c4b3b6">꒱</font>　lots of happiness ahead !! ♡
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/r2hI9Vg.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>05.14.22</sup></font> <font color="#cfbec2">꒱</font>　i love him so much .. !
 
 
 <br><br>
