--- a/recommended.html
+++ b/recommended.html
@@ -314,7 +314,7 @@ scroll down for webrings, cliques and buttons</font><br><br>
 <a href="https://eau-de-parfum.neocities.org" target="_blank"><img src="https://i.imgur.com/HdZq76a.png"></a>　　<a href="https://fwoofies.neocities.org" target="_blank"><img width="auto" height="31px" src="https://i.imgur.com/wn17u5J.gif"></a>　　　
 
 <br><br>
-<a href="https://purinland.neocities.org" target="_blank"><img src="https://i.imgur.com/iUZ9hzH.png"></a>
+<a href="https://swirl.neocities.org" target="_blank"><img src="https://i.imgur.com/XbjPpyA.png"></a>
 　<a href="https://strawberry-gashes.neocities.org" target="_blank"><img src="https://i.imgur.com/jxm5J4Q.gif"></a>　<a href="https://mysweetpiano.neocities.org" target="_blank"><img src="https://i.imgur.com/f6ZDC1w.gif"></a>　　
 
 <br><br><a href="https://web.archive.org/web/20071213151324/http://sozai-love.sakura.ne.jp:80/" target="_blank"><img src="https://i.imgur.com/81Si3Qn.gif"></a>
