--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 <meta name="title" content="ഒ">
 <meta name="description" content="𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙">
 <meta name="theme-color" content="#f7e9ed">
+<meta name="url" content="https://middlepot.com">
+<meta name="identifier-URL" content="https://middlepot.com">
 <meta property="og:url" content="https://middlepot.com">
 <meta property="og:title" content="ഒ">
+<meta property="og:site_name" content="middlepot.com">
 <meta property="og:description" content="𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙">
 <meta property="og:image" content="https://middlepot.com/img/pure.jpg">
 <meta property="og:image:type" content="image/jpeg">
@@ -43,6 +46,11 @@
 <meta property="twitter:title" content="ഒ">
 <meta property="twitter:description" content="𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙">
 <meta property="twitter:image" content="https://middlepot.com/img/pure.jpg">
+<meta name="creation_date" content="august 16, 2017">
+<meta name="author" content="middlepot, letters@middlepot.com">
+<meta name="designer" content="middlepot, letters@middlepot.com">
+<meta name="owner" content="middlepot, letters@middlepot.com">
+<meta name="copyright" content="poofties © middlepot">
 
 <script type="application/ld+json">
 {
@@ -52,7 +60,22 @@
   "alternateName": "ഒ",
   "description": "𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙",
   "url": "https://middlepot.com",
-  "logo": "https://middlepot.com/img/pure.jpg"
+  "logo": "https://middlepot.com/img/pure.jpg",
+  "foundingDate": "2017-08-16",
+  "founder": "middlepot",
+  "author": {
+            "@type": "Person",
+            "name": "middlepot",
+            "email": "letters@middlepot.com",
+            "url": "https://middlepot.com",
+            "brand": {
+                  "@type": "Brand",
+                  "name": "poofties™",
+                  "url": "https://poofties.club"
+                  "logo": "https://middlepot.com/img/poofties.jpg",
+                  }
+            }
+  "copyrightHolder": "poofties © middlepot",
 }
 </script>
 
