--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   "@type": "Brand",
                   "name": "poofties™",
                   "url": "https://poofties.club"
-                  "logo": "https://middlepot.com/img/poofties.jpg",
+                  "logo": "https://middlepot.com/img/poofties.jpg"
                   }
             }
   "copyrightHolder": "poofties © middlepot",
