--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             "brand": {
                   "@type": "Brand",
                   "name": "poofties™",
-                  "url": "https://poofties.club"
+                  "url": "https://poofties.club",
                   "logo": "https://middlepot.com/img/poofties.jpg"
                   }
             }
