--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   "logo": "https://middlepot.com/img/poofties.jpg"
                   }
             }
-  "copyrightHolder": "poofties © middlepot",
+  "copyrightHolder": "poofties © middlepot"
 }
 </script>
 
