--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   "url": "https://middlepot.com",
   "logo": "https://middlepot.com/img/pure.jpg",
   "foundingDate": "2017-08-16",
+  "copyrightHolder": "poofties © middlepot",
   "founder": "middlepot",
   "author": {
             "@type": "Person",
@@ -74,8 +75,7 @@
                   "url": "https://poofties.club",
                   "logo": "https://middlepot.com/img/poofties.jpg"
                   }
-            }
-  "copyrightHolder": "poofties © middlepot"
+         }
 }
 </script>
 
