--- a/index.html
+++ b/index.html
@@ -55,16 +55,15 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Organization",
+  "@type": "Blog",
   "name": "middlepot.com",
   "alternateName": "ഒ",
   "description": "𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙",
   "url": "https://middlepot.com",
-  "logo": "https://middlepot.com/img/pure.jpg",
-  "foundingDate": "2017-08-16",
-  "copyrightHolder": "poofties © middlepot",
-  "founder": "middlepot",
-  "author": {
+  "image": "https://middlepot.com/img/pure.jpg",
+  "dateCreated": "2017-08-16",
+  "copyrightNotice": "poofties © middlepot",
+  "creator": {
             "@type": "Person",
             "name": "middlepot",
             "email": "letters@middlepot.com",
@@ -75,7 +74,7 @@
                   "url": "https://poofties.club",
                   "logo": "https://middlepot.com/img/poofties.jpg"
                   }
-         }
+		}			         
 }
 </script>
 
