--- a/faq.html
+++ b/faq.html
@@ -499,31 +499,31 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <br><br>
 <center><img src="https://i.imgur.com/f5ywNMK.png"/>
 <br><br>
-<font color="#bfa8a8">subjects answered in q&a posts :</font>
+<font color="#bfa8a8">subjects answered in blog posts :</font>
 </center>
 <br><br>
 
-<a href="#name" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about my name</font></a>
-<font color="#aa8f8f"> | </font><a href="#myself" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about myself</font></a>
-<font color="#aa8f8f"> | </font><a href="#aesthetic" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about my aesthetic</font></a>
-<font color="#aa8f8f"> | </font><a href="#purity" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">purity & innocence</font></a>
-<font color="#aa8f8f"> | </font><a href="#fashion" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">my fashion style</font></a>
-<font color="#aa8f8f"> | </font><a href="#inspiration" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about inspired content</font></a>
-<font color="#aa8f8f"> | </font><a href="#messages" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about messages & requests</font></a>
-<font color="#aa8f8f"> | </font><a href="#internet" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">my internet journey</font></a>
-<font color="#aa8f8f"> | </font><a href="#socialmedia" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about disliking social media</font></a>
-<font color="#aa8f8f"> | </font><a href="#content" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about my content</font></a>
-<font color="#aa8f8f"> | </font><a href="#selfcare" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about self care</font></a>
-<font color="#aa8f8f"> | </font><a href="#individuality" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about individuality</font></a>
-<font color="#aa8f8f"> | </font><a href="#presence" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about presence</font></a>
-<font color="#aa8f8f"> | </font><a href="#femininity" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">cuteness & femininity</font></a>
-<font color="#aa8f8f"> | </font><a href="#html" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about web design</font></a>
-<font color="#aa8f8f"> | </font><a href="#beauty" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">my beauty care</font></a>
-<font color="#aa8f8f"> | </font><a href="#role" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">my role in life</font></a>
-<font color="#aa8f8f"> | </font><a href="#world" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about the world</font></a>
-<font color="#aa8f8f"> | </font><a href="#virtual" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">virtual world issues</font></a>
-<font color="#aa8f8f"> | </font><a href="#ego" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">fragility of the ego</font></a>
-<font color="#aa8f8f"> | </font><a href="#ib" style="text-decoration: none; border-bottom:1px solid #d8b6b6; padding-bottom: 0px;"><font color="#d8b6b6">about imageboards</font></a>
+<a href="#name" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about my name</font></a>
+<font color="#aa8f8f"> | </font><a href="#myself" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about myself</font></a>
+<font color="#aa8f8f"> | </font><a href="#aesthetic" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about my aesthetic</font></a>
+<font color="#aa8f8f"> | </font><a href="#purity" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">purity & innocence</font></a>
+<font color="#aa8f8f"> | </font><a href="#fashion" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">my fashion style</font></a>
+<font color="#aa8f8f"> | </font><a href="#inspiration" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about inspired content</font></a>
+<font color="#aa8f8f"> | </font><a href="#messages" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about messages & requests</font></a>
+<font color="#aa8f8f"> | </font><a href="#internet" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">my internet journey</font></a>
+<font color="#aa8f8f"> | </font><a href="#socialmedia" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about disliking social media</font></a>
+<font color="#aa8f8f"> | </font><a href="#content" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about my content</font></a>
+<font color="#aa8f8f"> | </font><a href="#selfcare" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about self care</font></a>
+<font color="#aa8f8f"> | </font><a href="#individuality" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about individuality</font></a>
+<font color="#aa8f8f"> | </font><a href="#presence" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about presence</font></a>
+<font color="#aa8f8f"> | </font><a href="#femininity" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">cuteness & femininity</font></a>
+<font color="#aa8f8f"> | </font><a href="#html" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about web design</font></a>
+<font color="#aa8f8f"> | </font><a href="#beauty" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">my beauty care</font></a>
+<font color="#aa8f8f"> | </font><a href="#role" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">my role in life</font></a>
+<font color="#aa8f8f"> | </font><a href="#world" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about the world</font></a>
+<font color="#aa8f8f"> | </font><a href="#virtual" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">virtual world issues</font></a>
+<font color="#aa8f8f"> | </font><a href="#ego" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">fragility of the ego</font></a>
+<font color="#aa8f8f"> | </font><a href="#ib" style="text-decoration: none; border-bottom:1px solid #e6d5d5; padding-bottom: 0px;"><font color="#d8b6b6">about imageboards</font></a>
 <br>
 <br><br>
 <font color="#d1b9b1"><font size="2">※</font> there are updates from time to time</font>
