--- a/index.html
+++ b/index.html
@@ -68,9 +68,13 @@
             "name": "middlepot",
             "email": "letters@middlepot.com",
             "url": "https://middlepot.com",
+            "image": "https://middlepot.com/img/pure.jpg",
+            "birthDate": "1997-08-11",
+            "jobTitle": "artist, crafter & designer",
             "brand": {
                   "@type": "Brand",
                   "name": "poofties™",
+                  "alternateName": "poofties.club",
                   "url": "https://poofties.club",
                   "logo": "https://middlepot.com/img/poofties.jpg"
                   }
