--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 <meta property="og:title" content="ഒ">
 <meta property="og:site_name" content="middlepot.com">
 <meta property="og:description" content="𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙">
-<meta property="og:image" content="https://middlepot.com/img/pure.jpg">
+<meta property="og:image" content="https://middlepot.com/img/banner.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:type" content="website">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://middlepot.com">
 <meta property="twitter:title" content="ഒ">
 <meta property="twitter:description" content="𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙">
-<meta property="twitter:image" content="https://middlepot.com/img/pure.jpg">
+<meta property="twitter:image" content="https://middlepot.com/img/banner.jpg">
 <meta name="creation_date" content="august 16, 2017">
 <meta name="author" content="middlepot, letters@middlepot.com">
 <meta name="designer" content="middlepot, letters@middlepot.com">
@@ -60,7 +60,7 @@
   "alternateName": "ഒ",
   "description": "𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙",
   "url": "https://middlepot.com",
-  "image": "https://middlepot.com/img/pure.jpg",
+  "image": "https://middlepot.com/img/banner.jpg",
   "dateCreated": "2017-08-16",
   "copyrightNotice": "poofties © middlepot",
   "creator": {
@@ -68,7 +68,7 @@
             "name": "middlepot",
             "email": "letters@middlepot.com",
             "url": "https://middlepot.com",
-            "image": "https://middlepot.com/img/pure.jpg",
+            "image": "https://middlepot.com/img/melissa.jpg",
             "birthDate": "1997-08-11",
             "jobTitle": "artist, crafter & designer",
             "brand": {
@@ -76,9 +76,9 @@
                   "name": "poofties™",
                   "alternateName": "poofties.club",
                   "url": "https://poofties.club",
-                  "logo": "https://middlepot.com/img/poofties.jpg"
+                  "logo": "https://poofties.club/img/logo.jpg"
                   }
-		}			         
+         }
 }
 </script>
 
