--- a/faq.html
+++ b/faq.html
@@ -27,11 +27,21 @@
 
 <link rel="shortcut icon" href="https://i.imgur.com/c2cyx81.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="robots" content="nosnippet">
+<meta name="robots" content="max-snippet:0">
+<meta name="robots" content="noarchive">
+<meta name="robots" content="notranslate">
+<meta name="robots" content="nositelinkssearchbox">
+<meta name="robots" content="max-video-preview:0">
+<meta name="robots" content="max-image-preview:standard">
 <meta name="title" content="ഒ">
 <meta name="description" content="𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙">
 <meta name="theme-color" content="#f7e9ed">
 <meta name="url" content="https://middlepot.com">
 <meta name="identifier-URL" content="https://middlepot.com">
+<meta name="thumbnail" content="https://middlepot.com/img/banner.jpg">
+<img src="https://middlepot.com/img/banner.jpg"
+alt="middlepot.com banner thumbnail preview main image" style="display:none">
 <meta property="og:url" content="https://middlepot.com">
 <meta property="og:title" content="ഒ">
 <meta property="og:site_name" content="middlepot.com">
